--- a/public/styles/scss/nav.scss
+++ b/public/styles/scss/nav.scss
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: #00a087;
   color: #e8fdff;
-  padding: 0 2em 0 2em;
+  padding: 0 2% 0 2%;
   z-index: 1;
   display: flex;
   align-items: center;
